<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (©) 2016 Jeff Harris <jefftharris@gmail.com>
  ~ All rights reserved. Use of the code is allowed under the
  ~ Artistic License 2.0 terms, as specified in the LICENSE file
  ~ distributed with this code, or available from
  ~ http://www.opensource.org/licenses/artistic-license-2.0.php
  -->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.gridlayout.widget.GridLayout android:layout_width="match_parent"
                                           android:layout_height="wrap_content"
                                           app:columnCount="2"
                                           app:useDefaultMargins="true">

        <TextView style="@style/GridLabelFixed"
                  android:text="@string/version"
                  android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView android:id="@+id/version"
                  style="@style/GridField"
                  android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView style="@style/GridLabelFixed"
                  android:text="@string/build_id"/>

        <TextView android:id="@+id/build_id"
                  style="@style/GridField"/>

        <TextView style="@style/GridLabelFixed"
                  android:text="@string/build_date"/>

        <TextView android:id="@+id/build_date"
                  style="@style/GridField"/>

    </androidx.gridlayout.widget.GridLayout>

    <TextView android:id="@+id/release_notes_title"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="4dp"
              android:layout_marginRight="4dp"
              android:layout_marginTop="4dp"
              android:text="@string/release_notes_title"
              android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView android:id="@+id/release_notes"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="4dp"
              android:layout_marginRight="4dp"
              android:text="@string/release_notes"
              android:textAppearance="?android:attr/textAppearanceSmall"/>

    <ToggleButton android:id="@+id/toggle_license"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textOff="@string/licenses"
                  android:textOn="@string/licenses"/>

    <TextView android:id="@+id/license"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="4dp"
              android:layout_marginRight="4dp"
              android:textAppearance="?android:attr/textAppearanceSmall"
              android:textSize="12sp"
              android:visibility="gone"/>
</merge>
