<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/fragment_full_vertical_margin"
            android:paddingLeft="@dimen/fragment_full_horizontal_margin"
            android:paddingRight="@dimen/fragment_full_horizontal_margin"
            android:paddingTop="@dimen/fragment_full_vertical_margin"
            tools:context=".AboutDialog">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <TextView android:id="@+id/version"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView android:id="@+id/build_id"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView android:id="@+id/build_date"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView android:id="@+id/release_notes_title"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/release_notes_title"
                  android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView android:id="@+id/release_notes"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/release_notes"
                  android:textAppearance="?android:attr/textAppearanceSmall"/>

        <ToggleButton android:id="@+id/toggle_license"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textOff="@string/licenses"
                      android:textOn="@string/licenses"/>
        
        <TextView android:id="@+id/license"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceSmall"
                  android:visibility="gone"/>

    </LinearLayout>

</ScrollView>
